package training.game.observer;

import java.util.ArrayList;
import java.util.List;

public class Observable {
    private List<Observer> observers = new ArrayList<>();

    public void addObserver(Observer observer) {
        this.observers.add(observer);
    }

    public void notifyObservers(String message) {
        for(Observer observer : observers){
            observer.update(message);
        }
    }

}
