package training.game.observer;

public interface Observer {
    void update(String message);
}
