package training.game.strategy;

public interface DamageStrategy {
    Integer getEnemyDamage();
}
